--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.4.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
+    "@tkwant/react-steps": "^1.0.0",
     "@types/styled-components": "^5.1.34",
     "@vercel/analytics": "^1.3.1",
     "react": "^18.3.1",
